--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tic-tac-toe</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    
-
+    <div id="gameboard"></div>
+    <p id="info"></p>
+    <!-- JS -->
     <script src="app.js"></script>
 </body>
 </html>
